## 0.1.0 ##
+ alien artefact
+ recipe for craft erlenmeyer
## 0.0.9 ##
+ item nuclear fuel alien 8TJ (4.5x Acc; 2.15x SpeedMax)
+ balancing uraniumFuelCellAlien recipe
## 0.0.8 ##
+ erlenmeyer blue 
+ technologies erlenmeyer blue 
+ uranium-processing_alien
+ uraniumFuelCellAlien 8000 GJ (=8 TJ)
+ uranium-360
+ balancing erlenmeyer recipes
+ fix bug
## 0.0.7 ##
change term "fiole" by "erlenmeyer"
## 0.0.6 ##
+ five technologies for enhance the speed of robot
+ five technologies for enhance the storage of robot
## 0.0.5 ##
+ fluid weapon 
+ two fluids : frost fluid and defrost fluid
## 0.0.4 ##
+ fiole 3 + techno name fixe + try stat balancing
## 0.0.3 ##
+ minor bug
## 0.0.2 ##
+ technology
## 0.0.1 ##
+ Initial release