@@ -1,0 +1,9 @@
+data:extend({
+		{
+            type = "bool-setting",
+            name = "flesh-unit-drops",
+            setting_type = "startup",
+            default_value = true,
+            order = "r",
+        },
+})
